--- a/src/components/quiz/_quiz.sass
+++ b/src/components/quiz/_quiz.sass
@@ -30,6 +30,7 @@
 
     // Quiz question block
     &__quest-block
+        display: none
         margin-top: 30px
         @include media-breakpoint-up(sm)
             margin-top: 35px
@@ -39,6 +40,9 @@
             margin-top: 45px
         @include media-breakpoint-up(xl)
             margin-top: 50px
+
+        &.is-active
+            display: block
 
     // Buttons
     &__btns
