--- a/src/index.pug
+++ b/src/index.pug
@@ -31,13 +31,13 @@ block main
                                 - n++;
 
                         //- Question buttons navigation
-                        .quiz__btns.text-center.mt-50
+                        .quiz__btns.quiz__btns--js.text-center.mt-50
                             .container
-                                .row.justify-content-center.m-0.m-lg-n15
+                                .row.justify-content-center
                                     .col-lg-auto.col-6.px-0.px-lg-15
                                         button.btn-prev.btn.btn-secondary.btn-s48.px-sm-25.btn-prev--js(type="button") < Назад
                                     .col-lg-auto.col-6.px-0.px-lg-15
-                                        button.btn-next.btn.btn-secondary.btn-flare.btn-s48.px-sm-25.btn-next--js(type="button") Cледующий шаг >
+                                        button.btn-next.btn.btn-secondary.btn-s48.px-sm-25.btn-next--js(type="button") Cледующий шаг >
 
                     //- ===================== Get phone block ======================================
                     .quiz__get-phone.mt-30.d-none
