Работает квиз по шакам и в конце показывается блок захвата телефона

--- a/src/index.pug
+++ b/src/index.pug
@@ -40,7 +40,7 @@ block main
                                         button.btn-next.btn.btn-secondary.btn-s48.px-sm-25.btn-next--js(type="button") Cледующий шаг >
 
                     //- ===================== Get phone block ======================================
-                    .quiz__get-phone.mt-30.d-none
+                    .quiz__get-phone.quiz__get-phone--js.mt-60
                         include ./components/quiz/quiz__get-phone
 
             //- Block footer
