--- a/src/components/progress/_progress.sass
+++ b/src/components/progress/_progress.sass
@@ -20,10 +20,16 @@
         &:not(:last-child)
             margin-right: 12px
 
+        span
+            display: none
+
         // Active state
         &.is-active
             color: $primary
 
             &::before
                 background-color: $primary
+
+            span
+                display: block
 
