--- a/src/components/quiz/_quiz.sass
+++ b/src/components/quiz/_quiz.sass
@@ -100,6 +100,8 @@
      * =================== Get phone ===================================
      */
     &__get-phone
+        display: none
+
         &-tlt
             color: #381c85
             text-transform: uppercase
