--- a/src/index.pug
+++ b/src/index.pug
@@ -47,8 +47,8 @@ block main
             include ./components/footer/footer
 
         //- ================ Result block - BAD ================================
-        .white-wrap.mt-20.d-none
-            .result.px-xl-20
+        .result.white-wrap.white-wrap--js.mt-20
+            .px-xl-20
                 .row.justify-content-center.no-gutters
                     .col-lg-10
                         header.result__header
