--- a/src/base/sass/main.sass
+++ b/src/base/sass/main.sass
@@ -17,7 +17,7 @@
 /**
  * Base
  */
-@import './base'
+// @import './base'
 @import './fonts'
 @import './png-icons'
 @import './typography'
@@ -27,6 +27,7 @@
  */
 @import '../../components/page/page'
 @import "../../components/header/header"
+@import "../../components/content/content"
 @import '../../components/textblock/textblock'
 @import "../../components/footer/footer"
 
