--- a/src/base/sass/_base.sass
+++ b/src/base/sass/_base.sass
@@ -1,5 +1,6 @@
 body
     height: 100%
-    padding-bottom: 60px
+    //padding-bottom: 60px
+    position: relative
     @include media-breakpoint-up(xl)
-        padding-bottom: 100px
+        //padding-bottom: 100px
