Отправка данных работает. Показывается блок с результатами после отправки.

--- a/src/components/quiz/_quiz.sass
+++ b/src/components/quiz/_quiz.sass
@@ -168,6 +168,9 @@
                     padding-left: 35px
                     padding-right: 35px
 
+                &-secondary
+                    cursor: not-allowed !important
+
         &-bottom
             p
                 color: #010101
