--- a/src/components/white-wrap/_white-wrap.sass
+++ b/src/components/white-wrap/_white-wrap.sass
@@ -21,6 +21,7 @@
         top: calc(100% - 150px)
         width: 100%
         max-width: 895px
+        margin-top: 0
         @include media-breakpoint-up(lg)
             top: calc(100% - 181px)
 
@@ -29,8 +30,17 @@
         .footer
             display: none
 
+    &--active
+        display: block !important
+
+        .result__static,
+        .result__container,
+        .footer
+            display: block
+
     &.result
         display: none
+        margin-top: 30px
 
 @keyframes animateTop
     0%
