--- a/src/base/sass/main.sass
+++ b/src/base/sass/main.sass
@@ -57,5 +57,5 @@
  * Libs styles
  */
 // @import '../../vendor/magnific-popup/main'
-// @import '../../vendor/js-plugin-circliful/main'
+@import '../../vendor/simple-ajax-form-submit/simple-ajax-form'
 
