Переделал валидацию поля телефона с change на keyup.

--- a/src/components/quiz/_quiz.sass
+++ b/src/components/quiz/_quiz.sass
@@ -100,7 +100,7 @@
      * =================== Get phone ===================================
      */
     &__get-phone
-        // display: none
+        display: none
 
         &-tlt
             color: #381c85
