--- a/src/components/result/_result.sass
+++ b/src/components/result/_result.sass
@@ -50,3 +50,9 @@
             line-height: 1.18
             text-align: center
 
+    &.is-inactive
+        position: absolute
+        bottom: 0
+        width: 100%
+        height: 276px
+        overflow: hidden
