Реализовал добавление блоков ответов при ответе на вопросы

--- a/src/components/result/good/result-block.pug
+++ b/src/components/result/good/result-block.pug
@@ -2,7 +2,7 @@ mixin result-block(title, img, text, footer)
     .result-block__title= title
     .row
         .col-lg-auto.text-center
-            img(src=`./images/result-block/good/${img}.jpg` alt= title)
+            img(src=`./images/result-block/${img}.jpg` alt= title)
 
         .col-lg.textblock.mt-15.mt-lg-0
             p.mb-0= text
