--- a/src/index.pug
+++ b/src/index.pug
@@ -46,7 +46,7 @@ block main
             //- Block footer
             include ./components/footer/footer
 
-        //- ================ Result block - BAD ================================
+        //- ================ Result block ================================
 
         #result.result.is-inactive.d-none
             .white-wrap.white-wrap--js
@@ -65,12 +65,7 @@ block main
                         h2.h4.result__container-tlt.mb-30 Результаты самодиагностики по 5 векторам <br class="d-none d-xl-inline" />достижения целей и успеха
 
                         //- Blocks
-                        .result__container-blocks
-                            //- Block #1
-                            .result-block
-                                include ./components/result/bad/result-block__1
-
-                            //- Block #2
+                        #resultContainerBlocks.result__container-blocks
                             .result-block.px-30
                                 include ./components/result/bad/result-block__2
 
