Исправил мелкие грамматические ошибки + fix bugs

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -8,7 +8,7 @@ header.header
                     span.d-block.text-primary.font-weight-bold Что мешает тебе
                     | добиваться
                     br.d-none.d-xl-inline
-                    | больших успехов?
+                    span.ml-2.ml-xl-0 больших успехов?
 
                 h2.h3.header__subtitle.text-center.mt-0
                     | Пройди тест и выясни,
