--- a/src/components/result/bad/result-block__static.pug
+++ b/src/components/result/bad/result-block__static.pug
@@ -5,7 +5,7 @@
 
     .col-lg.textblock.mt-20.mt-lg-0
         p.mb-0 Дорогие мои и любимые, к сожалению, я не могу выдать больше полезностей в рамках этого формата. Но я хорошо понимаю, что меняться одному сложно, нужна поддержка. Все становится гораздо легче, когда рядом люди с такими же задачами, как у тебя, и вы можете поддерживать друг друга.
-        h3.h6.text-cobalt.mt-1 Специально для тебя я создал бесплатную рабочую группу в Телеграме.
+        h3.h6.text-cobalt.mt-1 Специально для тебя я создал бесплатную рабочую группу в Телеграмме.
 
 
 .result-block__bottom-bordered
