Подключил Magnific Popup для всплывающего видео

--- a/src/base/sass/main.sass
+++ b/src/base/sass/main.sass
@@ -56,6 +56,5 @@
 /**
  * Libs styles
  */
-// @import '../../vendor/magnific-popup/main'
+@import '../../vendor/magnific-popup/main'
 @import '../../vendor/simple-ajax-form-submit/simple-ajax-form'
-
