--- a/src/index.pug
+++ b/src/index.pug
@@ -48,7 +48,7 @@ block main
 
         //- ================ Result block ================================
 
-        #result.result.is-inactive.d-none
+        #result.result.mt-30
             .white-wrap.white-wrap--js
                 .px-xl-20
                     .row.justify-content-center.no-gutters
