Плавный скроллинг до блока результата после отработки спиннера с галочкой

--- a/src/components/quiz/_quiz.sass
+++ b/src/components/quiz/_quiz.sass
@@ -46,6 +46,10 @@
 
     // Buttons
     &__btns
+        display: none
+        @include media-breakpoint-up(lg)
+            display: block
+
         .alert
             max-width: 400px
             margin-left: auto
