--- a/src/components/result/_result.sass
+++ b/src/components/result/_result.sass
@@ -2,12 +2,16 @@
     &__header
         display: flex
 
+        &.mt-30
+            .icon.unlock
+                display: inline-block
+
         .icon
             flex-shrink: 0
             margin-right: 20px
             margin-top: 5px
             @include media-breakpoint-up(xl)
-                margin-top: 26px
+                margin-top: 15px
 
     &__title
         border-bottom: 1px solid #959595
@@ -50,9 +54,22 @@
             line-height: 1.18
             text-align: center
 
+    .icon.lock
+        display: none
+
+    &:not(.is-inactive)
+        .icon.unlock
+            display: inline-block
+
     &.is-inactive
         position: absolute
         bottom: 0
         width: 100%
         height: 276px
         overflow: hidden
+
+        .icon.lock
+            display: inline-block
+
+        .icon.unlock
+            display: none
