--- a/src/index.pug
+++ b/src/index.pug
@@ -55,6 +55,7 @@ block main
                         .col-lg-10
                             header.result__header
                                 i.icon.unlock
+                                i.icon.lock
                                 h2.m-0.result__title Результат тестирования и мини-техники для тебя
 
                     //- Staic text
