--- a/src/mixins/sass/_sprite-img.scss
+++ b/src/mixins/sass/_sprite-img.scss
@@ -55,37 +55,37 @@ $car-image: '../images/sprite.png';
 $car: (49px, 174px, -49px, -174px, 60px, 30px, 270px, 217px, '../images/sprite.png', 'car', );
 $check-light-name: 'check-light';
 $check-light-x: 230px;
-$check-light-y: 108px;
+$check-light-y: 153px;
 $check-light-offset-x: -230px;
-$check-light-offset-y: -108px;
+$check-light-offset-y: -153px;
 $check-light-width: 28px;
 $check-light-height: 23px;
 $check-light-total-width: 270px;
 $check-light-total-height: 217px;
 $check-light-image: '../images/sprite.png';
-$check-light: (230px, 108px, -230px, -108px, 28px, 23px, 270px, 217px, '../images/sprite.png', 'check-light', );
+$check-light: (230px, 153px, -230px, -153px, 28px, 23px, 270px, 217px, '../images/sprite.png', 'check-light', );
 $check-sm-name: 'check-sm';
 $check-sm-x: 230px;
-$check-sm-y: 136px;
+$check-sm-y: 181px;
 $check-sm-offset-x: -230px;
-$check-sm-offset-y: -136px;
+$check-sm-offset-y: -181px;
 $check-sm-width: 10px;
 $check-sm-height: 8px;
 $check-sm-total-width: 270px;
 $check-sm-total-height: 217px;
 $check-sm-image: '../images/sprite.png';
-$check-sm: (230px, 136px, -230px, -136px, 10px, 8px, 270px, 217px, '../images/sprite.png', 'check-sm', );
+$check-sm: (230px, 181px, -230px, -181px, 10px, 8px, 270px, 217px, '../images/sprite.png', 'check-sm', );
 $dahsed-line-name: 'dahsed-line';
 $dahsed-line-x: 261px;
-$dahsed-line-y: 46px;
+$dahsed-line-y: 91px;
 $dahsed-line-offset-x: -261px;
-$dahsed-line-offset-y: -46px;
+$dahsed-line-offset-y: -91px;
 $dahsed-line-width: 7px;
 $dahsed-line-height: 1px;
 $dahsed-line-total-width: 270px;
 $dahsed-line-total-height: 217px;
 $dahsed-line-image: '../images/sprite.png';
-$dahsed-line: (261px, 46px, -261px, -46px, 7px, 1px, 270px, 217px, '../images/sprite.png', 'dahsed-line', );
+$dahsed-line: (261px, 91px, -261px, -91px, 7px, 1px, 270px, 217px, '../images/sprite.png', 'dahsed-line', );
 $family-name: 'family';
 $family-x: 92px;
 $family-y: 50px;
@@ -141,6 +141,17 @@ $like-total-width: 270px;
 $like-total-height: 217px;
 $like-image: '../images/sprite.png';
 $like: (90px, 101px, -90px, -101px, 47px, 47px, 270px, 217px, '../images/sprite.png', 'like', );
+$lock-name: 'lock';
+$lock-x: 230px;
+$lock-y: 46px;
+$lock-offset-x: -230px;
+$lock-offset-y: -46px;
+$lock-width: 30px;
+$lock-height: 40px;
+$lock-total-width: 270px;
+$lock-total-height: 217px;
+$lock-image: '../images/sprite.png';
+$lock: (230px, 46px, -230px, -46px, 30px, 40px, 270px, 217px, '../images/sprite.png', 'lock', );
 $man-woman-name: 'man-woman';
 $man-woman-x: 0px;
 $man-woman-y: 174px;
@@ -165,15 +176,15 @@ $pdf-image: '../images/sprite.png';
 $pdf: (142px, 101px, -142px, -101px, 41px, 43px, 270px, 217px, '../images/sprite.png', 'pdf', );
 $smile-name: 'smile';
 $smile-x: 230px;
-$smile-y: 46px;
+$smile-y: 91px;
 $smile-offset-x: -230px;
-$smile-offset-y: -46px;
+$smile-offset-y: -91px;
 $smile-width: 26px;
 $smile-height: 26px;
 $smile-total-width: 270px;
 $smile-total-height: 217px;
 $smile-image: '../images/sprite.png';
-$smile: (230px, 46px, -230px, -46px, 26px, 26px, 270px, 217px, '../images/sprite.png', 'smile', );
+$smile: (230px, 91px, -230px, -91px, 26px, 26px, 270px, 217px, '../images/sprite.png', 'smile', );
 $telegram-md-name: 'telegram-md';
 $telegram-md-x: 38px;
 $telegram-md-y: 101px;
@@ -187,15 +198,15 @@ $telegram-md-image: '../images/sprite.png';
 $telegram-md: (38px, 101px, -38px, -101px, 47px, 47px, 270px, 217px, '../images/sprite.png', 'telegram-md', );
 $telegram-name: 'telegram';
 $telegram-x: 230px;
-$telegram-y: 77px;
+$telegram-y: 122px;
 $telegram-offset-x: -230px;
-$telegram-offset-y: -77px;
+$telegram-offset-y: -122px;
 $telegram-width: 26px;
 $telegram-height: 26px;
 $telegram-total-width: 270px;
 $telegram-total-height: 217px;
 $telegram-image: '../images/sprite.png';
-$telegram: (230px, 77px, -230px, -77px, 26px, 26px, 270px, 217px, '../images/sprite.png', 'telegram', );
+$telegram: (230px, 122px, -230px, -122px, 26px, 26px, 270px, 217px, '../images/sprite.png', 'telegram', );
 $unlock-name: 'unlock';
 $unlock-x: 230px;
 $unlock-y: 0px;
@@ -210,7 +221,7 @@ $unlock: (230px, 0px, -230px, 0px, 40px, 41px, 270px, 217px, '../images/sprite.p
 $spritesheet-width: 270px;
 $spritesheet-height: 217px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($arrow-back-up-primary, $arrow-foward-down-white-mobile, $arrow-foward-down-white, $car, $check-light, $check-sm, $dahsed-line, $family, $header-subtitle-left, $header-subtitle-right, $house, $like, $man-woman, $pdf, $smile, $telegram-md, $telegram, $unlock, );
+$spritesheet-sprites: ($arrow-back-up-primary, $arrow-foward-down-white-mobile, $arrow-foward-down-white, $car, $check-light, $check-sm, $dahsed-line, $family, $header-subtitle-left, $header-subtitle-right, $house, $like, $lock, $man-woman, $pdf, $smile, $telegram-md, $telegram, $unlock, );
 $spritesheet: (270px, 217px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
