После отправки формы скрывается блок захвата телефона.

--- a/src/index.pug
+++ b/src/index.pug
@@ -7,7 +7,7 @@ append variables
 
 block main
     main#main.content
-        .white-wrap.mt-xl-n60
+        .white-wrap.whie-wrap__hide-success--js.mt-xl-n60
             .quiz.form.px-sm-20
                 //- Header
                 include ./components/quiz/quiz__header
